Edited wiki page Hydra through web user interface.

--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -181,7 +181,7 @@ You can, of course, build your Hydra however you like, but the formula that work
 
 On the WC-40, pick one of the short sides to be the "top." In the middle of this side, drill a 5/8" hole for the mode button. On the opposite short side, drill a 1 5/8" hole 1 3/8" down from the upper edge of the box (not counting the lid). Insert and center the inlet, then mark the four 1/8" holes in the corners. Once drilled, use 1/2" 6-32 bolts, nuts and lock washers to install the inlet. On the two long sides, drill a 1 1/8" hole centered on the lower "half" of the side (that is, between the short side with the inlet hole and the "rib" that runs up from the back at the center of the long side). Those two holes will be for the CG-16 cable glands.
 
-On the WX-42 panel, use the main board as a template to mark the mounting holes. You want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and in the remaining space, mark the mounting hole for the power distribution bus module and the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board. Use 4 2" 4-40 M-F hex standoffs to hold the logic board over the power supply. Make sure you leave enough space for the mode button (if you're going to use one) - if the power supply is too close to the top the button may hit it and not fit properly.
+On the WX-42 panel, use the main board as a template to mark the mounting holes. You want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and in the remaining space, mark the mounting hole for the power distribution bus module and the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board. You will be using 4 2" 4-40 M-F hex standoffs to hold the logic board over the power supply. Make sure you leave enough space for the mode button (if you're going to use one) - if the power supply is too close to the top the button may hit it and not fit properly.
 
 Use 4 1/2" 6-32 bolts, nuts and lock washers to secure the relays. Be sure to orient the relays so that the coil tabs are nearest the logic board.
 
@@ -191,19 +191,25 @@ Use the self-tapping screw supplied with the ground bus to secure it.
 
 Cut four short (around 4 inches or so) #10 wires - two red, two black. Attach a QD female connector to each end of each wire. Connect a red and a black to each relay on the "line" side (this is an arbitrary choice, but should be consistent). Connect the other end of each red wire to the "red" side of the power distribution bus module. Connect the free end of the black wires to the other side. Cut a 22 gauge red and black wire approximately 8 inches long. Attach a QD terminal to one end of each and twist them together in a loose braid. Connect the QD terminals to the power distribution bus module, matching the colors of the wires already there. Attach the other ends to the AC inputs of the power supply module (make *sure* you are connecting them to the AC side!). Cut two more red and black 22 gauge wires approximately 4 inches long and make another braid. Connect one end of each wire to the DC outputs of the power supply, matching red to positive, black to negative. Connect the other end of each to the power input terminal block on the main board, matching black to ground and red to the positive terminal.
 
-Use 2 1-3/4" 4-40 bolts, nuts and lock washers to secure the power supply. Be sure to install the wires for the power supply *before* installing the main board - the power supply will be inaccessible later. Use a 4-40 nut and lock washer to secure each standoff and use a 1/4" 4-40 bolt to attach the main board to the standoffs.
+Use 2 1-3/4" 4-40 bolts, nuts and lock washers to secure the power supply. Be sure to install the wires for the power supply *before* installing the main board - the power supply will be inaccessible later. Use a 4-40 nut and lock washer to secure each of the 4 2" 4-40 M-F hex standoffs for the main board to the panel and use 4 1/4" 4-40 bolt to attach the main board to the standoffs.
 
-Cut four short (around 4 inches or so) #10 black wires. Twist two into a loose braid and attach QD terminals to one end of each. Repeat for the other pair. Attach one pair's QD terminals to the coil terminals of one of the relays and the connect the other end to the relay terminals on the logic board that corresponds to the relay (that is, for Car "A"'s relay, use the "Car A" relay terminals). Repeat for the other relay.
+Cut four short (around 4 inches or so) #22 black wires. Twist two into a loose braid and attach QD terminals to one end of each. Repeat for the other pair. Attach one pair's QD terminals to the coil terminals of one of the relays and the connect the other end to the relay terminals on the logic board that corresponds to the relay (that is, for Car "A"'s relay, use the "Car A" relay terminals). Repeat for the other relay. The relay terminals are not polarized (that is, it doesn't matter which terminal on the relay goes to which terminal on the board).
 
-Connect the two current transformers to the current transformer connectors on the logic board.
+Connect the two current transformers to the current transformer connectors on the logic board. The coils are not polarized. Lay each CT on top of the corresponding car relay for now.
 
 Now install the mounting plate in the chassis. You may find it easiest to remove the inlet first.
 
-Cut the inlet hot and ground wires to length and install the two hot wires in the "line" terminals on each side of the power distribution bus module and the ground wire into the ground bus.
+Cut the inlet hot and ground wires to length and install the two hot wires in the "line" terminals on each side of the power distribution bus module and the ground wire into the ground bus. There is no standard color code for J1772 cabling. The inlet will have three large wires and two small wires. Of the three large, one will be green or green/yellow. That is the ground wire. The other two large wires are hot lines. Each hot line is interchangeable.
 
-Run the proximity and pilot wire from the inlet to the logic board, Run a small wire from the inlet ground connector on the board to the ground bus.
+Run the proximity and pilot wire from the inlet to the logic board. Using a VOM, if one of the small wires is an open circuit and the other has a resistance of 2.7 k-ohm to ground, then the open circuit is the pilot, and the other is the proximity. If both lines are open circuits, then you must close the "PROX_RES" jumper on the main board with some solder. If the ground terminal on the inlet is at "6 o'clock" and the two hot lines are at "10" and "2", then looking at the *back* of the inlet, proximity is at 7 o'clock and the pilot is at 5.
 
-Next, install each cable/plug set. Attach QD female connectors on the red and black lines. Pass one of the hot lines of each plug through the respective current transformer (it doesn't matter which, but do NOT pass both lines through), and then connect each hot line to one of the two relays on the "load" side. Connect the ground cable to the ground bus. Connect the pilot line and the proximity line (if available) to the respective connectors on the main board. If your plugs do not supply a proximity line, then just leave the proximity terminals empty.
+Run a #22 green wire from the inlet ground connector on the board to the ground bus.
+
+Next, install each cable/plug set. First, strip around 8 inches or so of the outer jacket off of the cable. Be very careful not to nick any insulation on the inner wires. Cut and discard any packing paper or cotton that is exposed with the wires. Next, install the cable glands. Take a paper towel and dampen it with vegetable oil. Rub the first few inches of the cable with it. Remove the large cable nut from the gland, thread it over the wires. Then repeat with the gland itself. Position the gland so that about 1/4" of the outer jacket protrudes inside. Securely attach the outer nut to the gland. Pass the wires through the box and thread the chassis nut for the gland over them. Install the gland in the chassis and secure it with the chassis nut.
+
+Again, there is no standard color code for the plug wires. Three of them will be markedly larger, and one of those three will be green or green/yellow. That is the ground, and the other two are the AC hot lines. It doesn't matter which hot line is which - both are interchangeable. If there is only one small wire, it will be the pilot. If there are two, then use an ohmmeter to measure the resistance from each to ground. One will be an open circuit, the other will have a resistance that changes as you push the latch button on the plug. The open circuit is the pilot, the other is the proximity.
+
+Attach QD female connectors on the #10 red and black wires (the hot lines). Pass one of the hot lines of each plug through the respective current transformer (it doesn't matter which, but do NOT pass both lines through), and then connect each hot line to one of the two relays on the "load" side. Connect the ground cable to the ground bus. Connect the pilot line and the proximity line (if available) to the respective connectors on the main board. If your plugs do not supply a proximity line, then just leave the proximity terminals empty.
 
 Be sure that each car plug's hot lines both go to a single relay's "load" terminals and that the corresponding relay coil wires, current transformer wires and pilot and proximity wires all, as a group, go to the same "car" side of the logic board. You do not want to turn the wrong car's power on!
 
