Edited wiki page Hydra through web user interface.

--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -81,11 +81,11 @@ The two car relays are DPST relays with 12vdc coils rated for whatever your outl
 
 In some (most?) cases, the J1772 inlet you get will be higher rated than your plugs and cables. The software is capable of limiting the inlet current separately, but in order to take advantage of this, you must insure that your relays are wired in a "star" pattern rather than daisy-chained. In a daisy-chain, the full current of the entire system will flow through the first component's cables, limiting the design current to that capacity. If you connect each relay's supply leads together to the inlet supply at the same point, then the inlet current is allowed to be higher.
 
-The best way to connect the inlet up with the two relays and the DC power supply is with a Cooper Bussman 11725-2 power distribution module. It has two screw terminals that can accommodate 2-14 gauge copper wire for accepting the inlet wiring, and has 8 1/4" QD terminals (four for each hot wire) for connecting to the load. It's rated at 70A, so it's plenty beefy enough.
+The best way to connect the inlet up with the two relays and the DC power supply is with a Cooper Bussman 16220-2 power distribution module. It has two screw terminals that can accommodate 2-14 gauge copper wire for accepting the inlet wiring, and has 8 screw terminals (four for each hot wire) for connecting to the load. It's rated at 175A, so it's plenty beefy enough.
 
-For each relay, designate a "line" side and a "load" side. On the line side, run a wire (for 30A, use 10 gauge) from each terminal of the relay to one of the two "load" side groups of QD connectors on the power distribution bus module. Be sure that each side of the relay gets connected to a different group (corresponding to a different inlet hot line) of QD terminals. Be *absolutely* sure that you've wired one hot line and one car (load) line to each of the switches in the relay and *not* inadvertently wired one of the switches to connect the two hot lines together!
+For each relay, designate a "line" side and a "load" side. On the line side, run a wire (for 30A, use 10 gauge) from each terminal of the relay to one of the two "load" side groups of screw connectors on the power distribution bus module. Be sure that each side of the relay gets connected to a different group (corresponding to a different inlet hot line) of terminals. Be *absolutely* sure that you've wired one hot line and one car (load) line to each of the switches in the relay and *not* inadvertently wired one of the switches to connect the two hot lines together!
 
-If you're using an internal power supply, you will also need to get "line" power into it. You can use 22 gauge wire. Use crimp-on QD terminals and plug them into the power distribution bus as well. Again, use one terminal from each group.
+If you're using an internal power supply, you will also need to get "line" power into it. The minimum gauge for the bus module is 14 gauge, but for the power supply 22 gauge is sufficient. If you use smaller wire, make sure that you've made a secure mechanical and electrical connection (the concern is less safety - though a loose wire could short something out - than reliability). Do not be tempted to "piggyback" the small wire along with one of the high current wires. That might not make a firm mechanical connection, and you do not want to compromise the high-current wiring!
 
 On the load side of each relay, connect up the hot wires of one of the J1772 cables. Run one of the hot lines through a CT coil before connecting it to the relay. Unlike OpenEVSE, you run only one of the lines through the coil, not both. It doesn't matter which one you pick.
 
@@ -176,11 +176,12 @@ Divide Rb by Te to get volts per amp. Divide that value by (5/1024) to get units
 You will need:
 
   # A Hydra "Quick kit," on which assembly has been completed
-  # The contents of the chassis BOM from DigiKey (power dist module, 2 DPST relays, 2 CT coils and a 12v 10W AC-DC converter)
+  # The contents of the chassis BOM from DigiKey (2 DPST relays, 2 CT coils and a 12v 10W AC-DC converter)
   # A SPST NO push button (not required if you don't need to use sequential mode)
   # A J1772 inlet
   # 2 J1772 cable/plug assemblies
   # A case and 2 cable glands. I recommend a Polycase WC-40, a WX-42 internal mounting panel and 2 CG-16 cable glands.
+  # A Cooper-Bussmann 16220-2 power distribution bus module (available from http://www.grainger.com/)
   # A 4 terminal ground bus (available from Home Depot)
   # About 8 inches or so (each) of red and black stranded #10 copper wire (you can obtain this from trimming the J1772 cables if you wish)
   # About a foot or so (each) of red and black stranded #22 copper wire
@@ -195,11 +196,11 @@ On the WX-42 panel, use the main board as a template to mark the mounting holes.
 
 Use 4 1/2" 6-32 bolts, nuts and lock washers to secure the relays. Be sure to orient the relays so that the coil tabs are nearest the logic board.
 
-Use 2 3/4" 6-32 bolts, nuts and lock washers to secure the power distribution bus module. Positioning the bus module is an exercise in compromise. Generally the inlet wires are 6 or 8 gauge, which makes them very stiff and difficult to bend. At the same time, you must insure that the module doesn't get in the way of either the inlet or the plug cables and/or cable glands.
+Use 4 1/4" 6-32 bolts, nuts and lock washers to secure the power distribution bus module. Positioning the bus module is an exercise in compromise. Generally the inlet wires are 6 or 8 gauge, which makes them very stiff and difficult to bend. At the same time, you must insure that the module doesn't get in the way of either the inlet or the plug cables and/or cable glands, and you must also insure that routing the load wires from the relays is not too difficult. Be sure that the mounting hardware for the bus module stays well away from the conductors and the attached wires!
 
 Use the self-tapping screw supplied with the ground bus to secure it.
 
-Cut four short (around 4 inches or so) #10 wires - two red, two black. Attach a QD female connector to each end of each wire. Connect a red and a black to each relay on the "line" side (this is an arbitrary choice, but should be consistent). Connect the other end of each red wire to the "red" side of the power distribution bus module. Connect the free end of the black wires to the other side. Cut a 22 gauge red and black wire approximately 8 inches long. Attach a QD terminal to one end of each and twist them together in a loose braid. Connect the QD terminals to the power distribution bus module, matching the colors of the wires already there. Attach the other ends to the AC inputs of the power supply module (make *sure* you are connecting them to the AC side!). Cut two more red and black 22 gauge wires approximately 4 inches long and make another braid. Connect one end of each wire to the DC outputs of the power supply, matching red to positive, black to negative. Connect the other end of each to the power input terminal block on the main board, matching black to ground and red to the positive terminal.
+Cut four short (around 4 inches or so) #10 wires - two red, two black. Attach a QD female connector to one end of each wire. Connect a red and a black to each relay on the "line" side (this is an arbitrary choice, but should be consistent). Connect the other end of each red wire to the "red" side of the power distribution bus module. Connect the free end of the black wires to the other side. Cut a 22 gauge red and black wire approximately 8 inches long. Twist them together in a loose braid. Connect one end of each to two of the "load" terminals of the power distribution bus module, matching the colors of the wires already there. Attach the other ends to the AC inputs of the power supply module (make *sure* you are connecting them to the AC side!). Cut two more red and black 22 gauge wires approximately 4 inches long and make another braid. Connect one end of each wire to the DC outputs of the power supply, matching red to positive, black to negative. Connect the other end of each to the power input terminal block on the main board, matching black to ground and red to the positive terminal.
 
 Use 2 1-3/4" 4-40 bolts, nuts and lock washers to secure the power supply. Be sure to install the wires for the power supply *before* installing the main board - the power supply will be inaccessible later. Use a 4-40 nut and lock washer to secure each of the 4 2" 4-40 M-F hex standoffs for the main board to the panel and use 4 1/4" 4-40 bolt to attach the main board to the standoffs.
 
