--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -14,6 +14,7 @@ OpenEVSE Plus has been tested with:
 || Chevy || Spark ||Timers - Supported || 3.3kW - 16A @240V ||None||
 || Ford || Focus EV || || 6.6kw - 30A @ 240V || None ||
 || Ford || C-Max Energi || Timers - Supported || 3.3kW - 16A @ 240V || None ||
+|| Fiat || 500e || Timers - Supported || 6.6kw - 30A @ 240V || None ||
 || Fisker || Karma || || 3.3kW - 16A @ 240V || None ||
 || Honda || Fit || || 6.6kw - 30A @ 240V || None ||
 || Mitsubishi || i-MiEV || || 3.3kW - 16A @ 240V || None ||
