--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -9,7 +9,7 @@ There are currently no known incompatibilities with any vehicle or vehicle featu
 = Vehicles Tested =
 OpenEVSE Plus has been tested with:
 || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
-|| BMW ||Active E ||Timers - Supported || ||
+|| BMW ||Active E ||Timers - Supported || || None ||
 || Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
 || Chevy || Spark ||Timers - Supported || 3.3kW - 16A @240V ||None||
 || Ford || Focus EV || || 6.6kw - 30A @ 240V || None ||
